--- a/timeline-style.css
+++ b/timeline-style.css
@@ -7,6 +7,7 @@
 body {
     background-color: var(--primary-color);
     color: var(--secondary-color);
+    font-family: var(--paragraph-font);
 }
 h1 {
     font-family: var(--title-font);
@@ -31,6 +32,7 @@ h1 {
     margin: 0 auto;
     padding-top: 50px;
     background: #fff;
+    font-family: var(--paragraph-font);
   }
   
   .timeline ul li::after {
@@ -85,6 +87,7 @@ h1 {
   }
   
   time {
+    font-family: var(--paragraph-font);
     display: block;
     font-size: 1.2rem;
     font-weight: bold;
@@ -150,7 +153,7 @@ h1 {
     .timeline ul li:nth-child(even) div::before {
       left: -15px;
       border-width: 8px 16px 8px 0;
-      border-color: transparent #f45b69 transparent transparent;
+      border-color: transparent var(--accent-color) transparent transparent;
     }
   }
   
