--- a/style-faq.css
+++ b/style-faq.css
@@ -1,28 +1,69 @@
-h1 {
-color:red;
-font-size: ;
-font-weight: 
-}
-h2 {
-    color: red;
-    font-size: ;
-    font-weight: 
-
-}
-h3 {
-    color:
-    font-size: ;
-    font-weight: 
-}
-p {
-font-size: ;
-font-weight: ;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-
-hr {
-    color: red;
-    width: 70%;
-    size: 10px;
-    text-align: right;
+body{
+    font-family: 'Open Sans', sans-serif;
+    color: #fff;
+    background-color: #000;
 }
+
+.title{
+    font-size: 50px;
+    text-align: center;
+    margin-top: 80px;
+    margin-bottom: 40px;
+    text-decoration: underline 4px;
+}
+.mainTitle {
+    margin-top: 10px;
+}
+
+
+.questions-container{
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.question{
+    border-bottom: 3px solid #fff;
+}
+.question button{
+    width: 100%;
+    background-color: #000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 20px;
+    border:none;
+    outline: none;
+    font-size: 22px;
+    color: #fff;
+    font-weight: 700;
+    cursor: pointer;
+}
+.question p{
+    font-size: 16px;
+    max-height: 0;
+    opacity: 0;
+    line-height: 1.5;
+    overflow: hidden;
+    transition: all 0.6s ease;
+}
+.d-arrow{
+    transition: transform 0.5s ease-in ;
+    color: #fff;
+}
+
+/*add this class when click*/
+.question p.show{
+    max-height: 200px; 
+    opacity: 1;
+    padding:0px 15px 30px 15px;
+}
+.question button .d-arrow.rotate{
+    transform: rotate(180deg);
+}
+
