--- a/timeline-style.css
+++ b/timeline-style.css
@@ -17,6 +17,53 @@ h1 {
     padding: 1rem;
 }
 
+
+nav {
+    display: flex; 
+    justify-content: space-around;
+    align-items: center;
+    background-color: var(--secondary-color);
+    opacity: 0.8;
+}
+
+nav #logo {
+    width: 28%;
+    z-index: 2;
+    margin: 5% 0;
+}
+
+nav ul {
+    display: flex; 
+    gap: 20px;
+}
+
+nav ul li {
+    display: inline-block;
+    position: relative;
+}
+
+nav ul li a {
+    color:rgb(0, 0, 0);
+    font-family: 'Open Sans', sans-serif;
+    list-style: none;
+    text-decoration: none;
+    font-size: 0.9rem;
+}
+
+nav ul li a::after {
+    content:"";
+    display: block;
+    position: absolute;
+    width: 0%;
+    height: 1px;
+    background: black;
+    transition: width 0.2s ease-in-out;
+}
+
+nav ul li a:hover::after {
+    width: 100%;
+}
+
 /* TIMELINE
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
