--- a/index-mobile_screen.css
+++ b/index-mobile_screen.css
@@ -12,9 +12,9 @@
 
 @font-face {
   font-family: "Tungsten";
-  src: url("/assets/fonts/Tungsten.woff2") format("woff2"),
+  src: url("/assets/fonts/Tungsten.woff2") format("woff2");
 }
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap');
 
 body { 
   width: 100%;
@@ -44,13 +44,15 @@ body {
 
 #logotext {
   font-family: "Tungsten";
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   letter-spacing: 0.2rem;
   text-align: center;
   border: 2px solid rgb(255, 0, 0);
   padding: 2px 2px 0px 5px;
   display : inline-block;
 }
+
+
 
 /* CURSOR */
 
@@ -193,32 +195,54 @@ nav>ul>li>a {
 
 /* BASELINE */
 
+.content{
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 0.7rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.date {
+  font-size: 3rem;
+  font-size: 1.3rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+}
+
 .baseline {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-40%);
-    font-family: 'Open Sans', sans-serif;
-    font-size: 48px;
-    font-weight: 900;
-    text-align: center;
-    line-height: 1.2;
+  font-family: Tungsten;
+  font-size: 4rem;
+  text-align: center;
+  line-height: 1.2;
 }
 
 .baseline span {
   color:rgb(243, 7, 7)
 }
 
+.btn {
+  display: inline-block;
+  padding: 8px 12px;
+  border: 1px rgb(0, 0, 0) solid;
+  border-radius: 5px;
+  background: rgba(255, 255, 255, 0);
+}
+
 .more {
-    font-family: Arial;
-    font-size: 17px;
-    color:rgba(0, 0, 0, 0.781);
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    bottom: 6%;
-    width: 100%;
-    }
+  font-family: 'Open Sans', sans-serif;
+  font-size: 17px;
+  color:rgba(0, 0, 0, 0.781);
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  bottom: 6%;
+  width: 100%;
+}
 
 /* SCROLL DOWN */
 
@@ -291,11 +315,41 @@ nav>ul>li>a {
   width: 100%;
   height: 100%; 
   text-align: center;
-  font-size: 5.3rem;
+  font-size: 4.8rem;
   font-family: Tungsten;
   color: rgb(0, 0, 0);
   background-color: rgb(255, 255, 255);
   mix-blend-mode: screen;
+}
+
+.festivaldescription {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color:rgb(0, 0, 0);
+  font-family: 'Open Sans', sans-serif;
+  text-transform: uppercase;
+  font-size: 1.25rem;
+  font-weight: 700;
+  line-height: 1.5rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  margin-right: 2rem;
+  margin-left: 2rem;
+}
+
+.divider {
+  content:"";
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color:rgb(0, 0, 0);
+  width: 40px;
+  border: 0.7px solid;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 /* .video-title h1 span{
@@ -322,17 +376,52 @@ h2{
   justify-content: center;
   color:rgb(0, 0, 0);
   font-family: 'Open Sans', sans-serif;
-  font-size: 1.6rem;
-  margin-bottom: 2rem;
-}
-
-.countdown {
-  display: flex;
-  flex-direction: center;
-  justify-content: space-around;
+  font-size: 1.8rem;
+  margin-bottom: 2.5rem;
 }
 
 h2 span{
   content: "";
   color:rgb(255, 0, 0);
+}
+
+.countdown {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  text-align: center;
+  font-size: 1.2rem;
+  line-height: 2rem;;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+  border: 1.5px solid rgb(255, 0, 0);
+  padding: 12px 0px 0px 5px;
+  margin-right: 4rem;
+  margin-left: 4rem;
+  border-radius: 7px;
+}
+
+.day {
+  font-size: 2rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+}
+
+.hour {
+  font-size: 2rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+}
+
+.min {
+  font-size: 2rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+}
+
+.sec {
+  font-size: 2rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
 }
