--- a/timeline-style.css
+++ b/timeline-style.css
@@ -33,12 +33,22 @@ nav {
 }
 /* TIMELINE
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
 .artist-img {
-  display: none;
+  max-width: 100%;
+  max-width: 100%;
 }
 .timeline::after {
-  
+  content: "";
+  position: absolute;
+  background-image: url(/assets/images/backgrounds/timeline-fond5.jpeg);
+  background-size: cover;
+  background-position: center;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -4;
+  opacity: 0.45;
 }
 .timeline ul {
     padding: 50px 0;
@@ -56,7 +66,7 @@ nav {
     background: #fff;
     font-family: var(--paragraph-font);
   }
-  
+  /*
   .timeline ul li::after {
     content: "";
     position: absolute;
@@ -69,6 +79,7 @@ nav {
     background: inherit;
     z-index: 1;
   }
+  */
   
   .timeline ul li div {
     opacity: 1;
