--- a/index-large_screen.css
+++ b/index-large_screen.css
@@ -41,30 +41,21 @@ body {
 
 /* LOGO */
 
-#logotext {
+#logo__header {
   font-family: "Tungsten";
   font-size: 2.5rem;
   letter-spacing: 0.2rem;
   text-align: center;
   border: 2px solid rgb(255, 0, 0);
-  padding: 5px 10px 0px 10px;
-  display: inline-block;
+  padding: 2px 5px 0px 9px;
+  display : inline-block;
 }
 
+#logo__header>a{
+  text-decoration: none;
+  color: black;
+}
 
-/* CURSOR */
-
-/* .cursor {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1200;
-  width: 16px;
-  height: 16px;
-  background-color: black;
-  border-radius: 50%;
-  pointer-events: none;
-} */
 
 /* NAVIGATION */
 
@@ -102,71 +93,69 @@ li a::after {
     content:"";
     display: block;
     position: absolute;
+    top: 45%;
     width: 0%;
-    height: 1px;
+    height: 2px;
     background: black;
     transition: width 0.2s ease-in-out;
 }
 
 li a:hover::after {
-    width: 100%;
+    width: 120%;
+    left: -12%;
 }
-
-/* MENU */
-
-/* #menu{
-    display: flex; 
-    justify-content: space-between;
-    align-items: center;
-    top: 0;
-    height: 0;
-    opacity: 0;
-    text-align: center;
-    line-height: 5rem;
-    padding-top: 50%;
-    transition: all 0.3s ease-in-out;
-}
-
-#menu li{
-  list-style: none;
-}
-
-#menu a{
-  color:#fff;
-  display: block;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 38px;
-  text-decoration: none;
-} */
 
 /* BASELINE */
 
+.content{
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 0.7rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.date {
+  font-size: 2rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+}
+
 .baseline {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-40%);
-    font-family: 'Open Sans', sans-serif;
-    font-size: 48px;
-    font-weight: 900;
-    text-align: center;
-    line-height: 1.2;
+  font-family: Tungsten;
+  font-size: 6rem;
+  text-align: center;
+  line-height: 1.2;
 }
 
 .baseline span {
   color:rgb(243, 7, 7)
 }
 
+.btn__cta1 {
+  display: inline-block;
+  padding: 8px 12px;
+  border: 1px rgb(0, 0, 0) solid;
+  border-radius: 5px;
+  background: rgba(255, 255, 255, 0);
+  cursor: pointer;
+  font-size: 1rem;
+}
+
 .more {
-    font-family: Arial;
-    font-size: 17px;
-    color:rgba(0, 0, 0, 0.781);
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    bottom: 6%;
-    width: 100%;
-    }
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.4rem;
+  color:rgba(0, 0, 0, 0.781);
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  bottom: 6%;
+  width: 100%;
+}
 
 /* SCROLL DOWN */
 
@@ -216,20 +205,20 @@ li a:hover::after {
   100% { transform:translate(0,10px) rotate(45deg); opacity: 0; }
 }
 
-
 /* VIDEO TITLE */
 
 .video-title {
   position: relative;
-  margin-top: 4rem;
   width: 100%;
+  margin-top: 3rem;
 }
 
 .video-title video {
   position: absolute;
   width: 100%;
-  height: 90%;
+  height: 100%;
   object-fit: cover;
+  padding: 10px;
 }   
  
 .video-title h1 {
@@ -238,24 +227,342 @@ li a:hover::after {
   width: 100%;
   height: 100%; 
   text-align: center;
-  font-size: 5.3rem;
+  font-size: 7rem;
   font-family: Tungsten;
-  line-height: 5rem;
+  letter-spacing: 0.2rem;
   color: rgb(0, 0, 0);
   background-color: rgb(255, 255, 255);
   mix-blend-mode: screen;
 }
 
-.video-title h1 span{
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%; 
+.festivaldescription {
+  display: flex;
+  justify-content: center;
   text-align: center;
-  font-size: 5.3rem;
-  font-family: Tungsten;
-  line-height: 5rem;
-  color: rgb(0, 0, 0);
+  color:rgb(0, 0, 0);
+  font-family: 'Open Sans', sans-serif;
+  text-transform: uppercase;
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 1.5rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  margin-right: 2rem;
+  margin-left: 2rem;
+}
+
+.divider {
+  content:"";
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color:rgb(0, 0, 0);
+  width: 80px;
+  border: 0.7px solid;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 3rem;
+  margin-bottom: 4rem;
 }
 
 /* COUNTDOWN */
+
+#countdown-cta {
+  margin-top: 1.5rem;
+  margin-bottom: 3rem;
+}
+
+h2{
+  display: flex;
+  justify-content: center;
+  color:rgb(0, 0, 0);
+  font-family: 'Open Sans', sans-serif;
+  font-size: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+h2 span{
+  content: "";
+  color:rgb(255, 0, 0);
+}
+
+.countdown {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  text-align: center;
+  font-size: 1.5rem;
+  line-height: 2rem;;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+}
+
+.day {
+  font-size: 2rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+}
+
+.hour {
+  font-size: 2rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+}
+
+.min {
+  font-size: 2rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+}
+
+.sec {
+  font-size: 2rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+}
+
+.button__cta {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 60px;
+  margin-bottom: 80px;
+}
+
+.btn__cta {
+  padding: 10px 14px;
+  border-radius: 5px; 
+  border: none; 
+  background-color: #ff0000;
+  font-size: 1.5rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.btn__cta:hover {
+  background-color: #1D1D1D;
+  color: #ff0000;
+}
+
+/* SLIDER */
+
+#slider {
+  margin-bottom: 50px;
+  margin-right: 5%;
+  margin-left: 5%;
+}
+
+.photo-slider {
+	position: relative;
+	width: 100%;
+	max-width: 1000px;
+  object-fit: cover;
+	margin: 0 auto;
+	overflow: hidden;
+	font-size: 0;
+}
+
+.slick-slide {
+	position: relative;
+	z-index: 1;
+	overflow: hidden;
+}
+
+.slick-slide .photo {
+	display: block;
+	width: 700px;
+  object-fit: cover;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+	margin: 0 auto;
+	overflow: hidden;
+}
+
+.slick-slide .photo img {
+	display: block;
+	width: 100%;
+	transform: scale(1);
+	filter: grayscale(0) brightness(1);
+	transition: .5s ease-in-out;
+}
+
+.slick-slide:hover .photo img {
+	transform: scale(1.15);
+	filter: grayscale(.8) brightness(.5);
+}
+
+.slick-slide .text {
+	position: absolute;
+	left: 50%;
+	top: 60%;
+  transform: translateX(-50%);
+  text-align: center;
+	font-family: 'Lora', serif;
+	font-size: 90px;
+	font-weight: 700;
+	color: #ffffff;
+	white-space: nowrap;
+	mix-blend-mode: difference;
+}
+
+.slick-arrow {
+	position: absolute;
+	z-index: 10;
+	top: 50%;
+	width: 80px;
+	height: 80px;
+	font-size: 0;
+	color: #ffffff;
+	background-color: transparent;
+	border-color: #ffffff;
+	border-width: 3px 0;
+	border-radius: 50%;
+	transform: translateY(-50%);
+	outline: none;
+	cursor: pointer;
+}
+
+.slick-arrow::before,
+.slick-arrow::after {
+	font-family: 'Lora', serif;
+	font-size: 20px;
+	font-weight: 700;
+}
+
+.slick-arrow.slick-prev::before {
+	content: 'Prev';
+}
+
+.slick-arrow.slick-next::before {
+	content: 'Next';
+}
+
+.slick-arrow.slick-prev {
+	left: 20px;
+}
+
+.slick-arrow.slick-next {
+	right: 20px;
+}
+
+/* NEWSLETTER */
+
+.container{
+  background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.616)), url(assets/images/newsletter.jpg) no-repeat center;
+  background-size: cover;
+  padding: 100px 40px;
+}
+
+.container p {
+  max-width: 600px;
+  margin: 30px auto;
+  color: rgb(0, 0, 0);
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+.email-box{
+  height: 40px;
+  justify-content: center;
+  display: flex; /*its better to use inline-flex*/
+}
+.email-box i{
+  background: #000000;
+  width: 40px;
+  line-height: 40px;
+}
+.tbox,.btn{
+  border: none;
+  outline: none;
+}
+.tbox{
+  width: 0px;
+  transition: 0.6s;
+}
+.email-box:hover > .tbox,.tbox:focus{
+  width: 260px;
+  padding: 0 10px;
+}
+.btn{
+  background: #000000;
+  color: white;
+  padding: 0 10px;
+  text-transform: uppercase;
+  cursor: pointer;
+  border-radius: 0;
+}
+
+.email {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  color: #ffffff;
+  
+}
+
+/* FOOTER */
+
+.footer__container {
+  background-color: #1D1D1D;
+  padding: 3rem 3rem;
+}
+
+#footer__logo {
+  display: flex;
+  justify-content: center;
+}
+
+#footer__logotext {
+  font-family: "Tungsten";
+  font-size: 1.8rem;
+  letter-spacing: 0.2rem;
+  text-align: center;
+  border: 2px solid rgb(255, 0, 0);
+  padding: 2px 5px 0px 9px;
+  display : inline-block;
+  color: white;
+}
+
+#footer__adress {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+#footer__adress, .p {
+  color: #757575;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 0.8rem;
+  font-weight: 500;
+  line-height: 0.6rem;
+}
+
+#footer__social {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  margin-top: 2rem;
+}
+
+footer #footer__social li{
+  list-style: none;
+  font-size: 1.8rem;
+  color: #757575;
+}
+
+footer #footer__social li:hover {
+  list-style: none;
+  font-size: 1.8rem;
+  color: #ff0000;
+}
