--- a/index-mobile_screen.css
+++ b/index-mobile_screen.css
@@ -39,12 +39,11 @@ body {
   z-index: -100;
 }
 
-
 /* LOGO */
 
 #logo__header {
   font-family: "Tungsten";
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   letter-spacing: 0.2rem;
   text-align: center;
   border: 2px solid rgb(255, 0, 0);
@@ -52,21 +51,10 @@ body {
   display : inline-block;
 }
 
-
-
-/* CURSOR */
-
-/* .cursor {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1200;
-  width: 16px;
-  height: 16px;
-  background-color: black;
-  border-radius: 50%;
-  pointer-events: none;
-} */
+#logo__header>a{
+  text-decoration: none;
+  color: black;
+}
 
 /* NAVIGATION */
 
@@ -99,7 +87,7 @@ nav>ul>li>a {
     font-size: 1rem;
 }
 
-/* MENU */
+/* BURGER MENU */
 
 #burger-menu {
     cursor: pointer;
@@ -225,12 +213,13 @@ nav>ul>li>a {
   color:rgb(243, 7, 7)
 }
 
-.btn {
+.btn__cta1 {
   display: inline-block;
   padding: 8px 12px;
   border: 1px rgb(0, 0, 0) solid;
   border-radius: 5px;
   background: rgba(255, 255, 255, 0);
+  cursor: pointer;
 }
 
 .more {
@@ -317,6 +306,7 @@ nav>ul>li>a {
   text-align: center;
   font-size: 4.8rem;
   font-family: Tungsten;
+  letter-spacing: 0.2rem;
   color: rgb(0, 0, 0);
   background-color: rgb(255, 255, 255);
   mix-blend-mode: screen;
@@ -352,18 +342,6 @@ nav>ul>li>a {
   margin-bottom: 2rem;
 }
 
-/* .video-title h1 span{
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%; 
-  text-align: center;
-  font-size: 5.3rem;
-  font-family: Tungsten;
-  line-height: 4rem;
-  color: rgb(0, 0, 0);
-} */
-
 /* COUNTDOWN */
 
 #countdown-cta {
@@ -395,11 +373,6 @@ h2 span{
   line-height: 2rem;;
   font-family: 'Open Sans', sans-serif;
   font-weight: 600;
-  border: 1.5px solid rgb(255, 0, 0);
-  padding: 12px 20px 10px 20px;
-  margin-right: 10%;
-  margin-left: 10%;
-  border-radius: 7px;
 }
 
 .day {
@@ -426,6 +399,194 @@ h2 span{
   font-weight: 700;
 }
 
+.button__cta {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
+}
+
+.btn__cta {
+  padding: 10px 14px;
+  border-radius: 5px; 
+  border: none; 
+  background-color: #ff0000;
+  font-size: 1rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.btn__cta:hover {
+  background-color: #1D1D1D;
+  color: #ff0000;
+}
+
+
+/* SLIDER */
+
+#slider {
+  margin-bottom: 50px;
+  margin-right: 5%;
+  margin-left: 5%;
+}
+
+.photo-slider {
+	position: relative;
+	width: 100%;
+	max-width: 1000px;
+  object-fit: cover;
+	margin: 0 auto;
+	overflow: hidden;
+	font-size: 0;
+}
+
+.slick-slide {
+	position: relative;
+	z-index: 1;
+	overflow: hidden;
+}
+
+.slick-slide .photo {
+	display: block;
+	width: 700px;
+  object-fit: cover;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+	margin: 0 auto;
+	overflow: hidden;
+}
+
+.slick-slide .photo img {
+	display: block;
+	width: 100%;
+	transform: scale(1);
+	filter: grayscale(0) brightness(1);
+	transition: .5s ease-in-out;
+}
+
+.slick-slide:hover .photo img {
+	transform: scale(1.15);
+	filter: grayscale(.8) brightness(.5);
+}
+
+.slick-slide .text {
+	position: absolute;
+	left: 50%;
+	top: 60%;
+  transform: translateX(-50%);
+  text-align: center;
+	font-family: 'Lora', serif;
+	font-size: 90px;
+	font-weight: 700;
+	color: #ffffff;
+	white-space: nowrap;
+	mix-blend-mode: difference;
+}
+
+.slick-arrow {
+	position: absolute;
+	z-index: 10;
+	top: 50%;
+	width: 80px;
+	height: 80px;
+	font-size: 0;
+	color: #ffffff;
+	background-color: transparent;
+	border-color: #ffffff;
+	border-width: 3px 0;
+	border-radius: 50%;
+	transform: translateY(-50%);
+	outline: none;
+	cursor: pointer;
+}
+
+.slick-arrow::before,
+.slick-arrow::after {
+	font-family: 'Lora', serif;
+	font-size: 20px;
+	font-weight: 700;
+}
+
+.slick-arrow.slick-prev::before {
+	content: 'Prev';
+}
+
+.slick-arrow.slick-next::before {
+	content: 'Next';
+}
+
+.slick-arrow.slick-prev {
+	left: 20px;
+}
+
+.slick-arrow.slick-next {
+	right: 20px;
+}
+
+
+/* NEWSLETTER */
+
+.container{
+  background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.616)), url(assets/images/newsletter.jpg) no-repeat center;
+  background-size: cover;
+  padding: 100px 40px;
+}
+
+.container p {
+  max-width: 600px;
+  margin: 30px auto;
+  color: rgb(0, 0, 0);
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+.email-box{
+  height: 40px;
+  justify-content: center;
+  display: flex; /*its better to use inline-flex*/
+}
+.email-box i{
+  background: #000000;
+  width: 40px;
+  line-height: 40px;
+}
+.tbox,.btn{
+  border: none;
+  outline: none;
+}
+.tbox{
+  width: 0px;
+  transition: 0.6s;
+}
+.email-box:hover > .tbox,.tbox:focus{
+  width: 260px;
+  padding: 0 10px;
+}
+.btn{
+  background: #000000;
+  color: white;
+  padding: 0 10px;
+  text-transform: uppercase;
+  cursor: pointer;
+  border-radius: 0;
+}
+
+.email {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  color: #ffffff;
+  
+}
 
 /* FOOTER */
 
