--- a/style.css
+++ b/style.css
@@ -12,6 +12,23 @@
     --accent-font: Arial;
 }
 
+/* LOGO */
+
+#logo__header {
+  font-family: "Tungsten";
+  font-size: 1.8rem;
+  letter-spacing: 0.2rem;
+  text-align: center;
+  border: 2px solid rgb(255, 0, 0);
+  padding: 2px 5px 0px 9px;
+  display : inline-block;
+}
+
+#logo__header>a{
+  text-decoration: none;
+  color: black;
+}
+
 nav {
     display: flex; 
     justify-content: space-around;
@@ -57,3 +74,72 @@ nav ul li a::after {
 nav ul li a:hover::after {
     width: 100%;
 }
+
+/* FOOTER */
+
+footer{
+  position: absolute;
+  bottom:0;
+  width:100%;
+  margin-top: 10rem;
+  padding-top:50px;
+  height:50px;
+}
+
+.footer__container {
+    background-color: #1D1D1D;
+    padding: 3rem 3rem;
+    margin-top: 10rem;
+  }
+  
+  #footer__logo {
+    display: flex;
+    justify-content: center;
+  }
+  
+  #footer__logotext {
+    font-family: "Tungsten";
+    font-size: 1.8rem;
+    letter-spacing: 0.2rem;
+    text-align: center;
+    border: 2px solid rgb(255, 0, 0);
+    padding: 2px 5px 0px 9px;
+    display : inline-block;
+    color: white;
+  }
+  
+  #footer__adress {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2rem;
+  }
+  
+  #footer__adress, .p {
+    color: #757575;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 0.8rem;
+    font-weight: 500;
+    line-height: 0.6rem;
+  }
+  
+  #footer__social {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    margin-top: 2rem;
+  }
+  
+  footer #footer__social li{
+    list-style: none;
+    font-size: 1.8rem;
+    color: #757575;
+  }
+  
+  footer #footer__social li:hover {
+    list-style: none;
+    font-size: 1.8rem;
+    color: #ff0000;
+  }
+
+
