--- a/timeline-style.css
+++ b/timeline-style.css
@@ -33,10 +33,8 @@ nav {
 }
 /* TIMELINE
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.artist-img {
-  max-width: 100%;
-  max-width: 100%;
-}
+
+/*
 .timeline::after {
   content: "";
   position: absolute;
@@ -50,12 +48,15 @@ nav {
   z-index: -4;
   opacity: 0.45;
 }
+*/
 .timeline ul {
     padding: 50px 0;
-    opacity: 2;
-    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: space-around;
+    flex-wrap: wrap;
   }
-
+/*
   .timeline ul li {
     opacity: 2;
     list-style-type: none;
@@ -66,7 +67,7 @@ nav {
     background: #fff;
     font-family: var(--paragraph-font);
   }
-  /*
+  
   .timeline ul li::after {
     content: "";
     position: absolute;
@@ -81,16 +82,35 @@ nav {
   }
   */
   
-  .timeline ul li div {
-    opacity: 1;
+  .timeline {
+    margin: 1rem;
+    display: grid;
+    grid-template-rows: 5fr 1fr 2fr;
+    grid-template-columns: 1fr;
+    grid-template-areas: "a b c d";
     position: relative;
-    bottom: 0;
+    /*bottom: 0;*/
     width: 400px;
     padding: 15px;
-    background: var(--secondary-color);
     color: var(--primary-color);
+    border: solid 3px var(--accent-color);
+    border-radius: 10px;
   }
-  
+
+  .artist{
+    display: flex;
+    flex-direction: space-between;
+    position: absolute;
+  }
+
+  .artist-img {
+    position: absolute;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    z-index:-1;
+  }
+  /*
   .timeline ul li div::before {
     content: "";
     position: absolute;
@@ -132,11 +152,11 @@ nav {
     font-weight: bold;
     margin-bottom: 8px;
   }
-  
+  */
   
   /* EFFECTS
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
-  
+  /*
   .timeline ul li::after {
     transition: background 0.5s ease-in-out;
   }
@@ -164,7 +184,7 @@ nav {
     visibility: visible;
     opacity: 1;
   }
-  
+  */
   
   /* GENERAL MEDIA QUERIES
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
