--- a/index-large_screen.css
+++ b/index-large_screen.css
@@ -5,16 +5,11 @@
 }
 
 :root {
-    --primary-color: black;
-    --secondary-color: white;
-    --accent-color: red;
+  --primary-color: rgb(29, 29, 29);
+  --secondary-color: white;
+  --accent-color: red;
 }
 
-@font-face {
-  font-family: "Tungsten";
-  src: url("/assets/fonts/Tungsten.woff2") format("woff2");
-}
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
 
 body { 
   width: 100%;
@@ -46,14 +41,14 @@ body {
   font-size: 2.5rem;
   letter-spacing: 0.2rem;
   text-align: center;
-  border: 2px solid rgb(255, 0, 0);
+  border: 2px solid var(--accent-color);
   padding: 2px 5px 0px 9px;
   display : inline-block;
 }
 
 #logo__header>a{
   text-decoration: none;
-  color: black;
+  color: var(--primary-color);
 }
 
 
@@ -82,7 +77,7 @@ li {
 }
 
 li a {
-    color:rgb(0, 0, 0);
+    color: var(--primary-color);
     font-family: 'Open Sans', sans-serif;
     list-style: none;
     text-decoration: none;
@@ -96,7 +91,7 @@ li a::after {
     top: 45%;
     width: 0%;
     height: 2px;
-    background: black;
+    background: var(--primary-color);
     transition: width 0.2s ease-in-out;
 }
 
@@ -120,36 +115,36 @@ li a:hover::after {
 }
 
 .date {
-  font-size: 2rem;
+  font-size: 2.2rem;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
 }
 
 .baseline {
   font-family: Tungsten;
-  font-size: 6rem;
+  font-size: 6.5rem;
   text-align: center;
   line-height: 1.2;
 }
 
 .baseline span {
-  color:rgb(243, 7, 7)
+  color: var(--accent-color);
 }
 
 .btn__cta1 {
   display: inline-block;
   padding: 8px 12px;
-  border: 1px rgb(0, 0, 0) solid;
+  border: 1px var(--primary-color) solid;
   border-radius: 5px;
-  background: rgba(255, 255, 255, 0);
+  background: none;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 
 .more {
   font-family: 'Open Sans', sans-serif;
   font-size: 1.4rem;
-  color:rgba(0, 0, 0, 0.781);
+  color: var(--primary-color);
   display: flex;
   justify-content: center;
   position: absolute;
@@ -177,8 +172,8 @@ li a:hover::after {
   text-shadow: 0;
   width: 17px;
   height: 17px;
-  border-bottom: 2px solid rgb(0, 0, 0);
-  border-right: 2px solid rgb(0, 0, 0);
+  border-bottom: 2px solid var(--primary-color);
+  border-right: 2px solid var(--primary-color);
   z-index: 9;
   -webkit-transform: translate(-50%, 0%) rotate(45deg);
   -moz-transform: translate(-50%, 0%) rotate(45deg);
@@ -230,8 +225,8 @@ li a:hover::after {
   font-size: 7rem;
   font-family: Tungsten;
   letter-spacing: 0.2rem;
-  color: rgb(0, 0, 0);
-  background-color: rgb(255, 255, 255);
+  color: var(--secondary-color);
+  background-color: var(--secondary-color);
   mix-blend-mode: screen;
 }
 
@@ -239,7 +234,7 @@ li a:hover::after {
   display: flex;
   justify-content: center;
   text-align: center;
-  color:rgb(0, 0, 0);
+  color: var(--primary-color);
   font-family: 'Open Sans', sans-serif;
   text-transform: uppercase;
   font-size: 1.6rem;
@@ -256,7 +251,7 @@ li a:hover::after {
   display: flex;
   justify-content: center;
   text-align: center;
-  color:rgb(0, 0, 0);
+  color: var(--primary-color);
   width: 80px;
   border: 0.7px solid;
   margin-right: auto;
@@ -283,7 +278,7 @@ h2{
 
 h2 span{
   content: "";
-  color:rgb(255, 0, 0);
+  color: var(--accent-color);
 }
 
 .countdown {
@@ -334,17 +329,17 @@ h2 span{
   padding: 10px 14px;
   border-radius: 5px; 
   border: none; 
-  background-color: #ff0000;
+  background-color: var(--accent-color);
   font-size: 1.5rem;
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
-  color: #ffffff;
+  color: var(--secondary-color);
   cursor: pointer;
 }
 
 .btn__cta:hover {
-  background-color: #1D1D1D;
-  color: #ff0000;
+  background-color: var(--primary-color);
+  color: var(--accent-color);
 }
 
 /* SLIDER */
@@ -407,7 +402,7 @@ h2 span{
 	font-family: 'Lora', serif;
 	font-size: 90px;
 	font-weight: 700;
-	color: #ffffff;
+	color: var(--secondary-color);
 	white-space: nowrap;
 	mix-blend-mode: difference;
 }
@@ -419,9 +414,9 @@ h2 span{
 	width: 80px;
 	height: 80px;
 	font-size: 0;
-	color: #ffffff;
+	color: var(--secondary-color);
 	background-color: transparent;
-	border-color: #ffffff;
+	border-color: var(--secondary-color);
 	border-width: 3px 0;
 	border-radius: 50%;
 	transform: translateY(-50%);
@@ -463,7 +458,7 @@ h2 span{
 .container p {
   max-width: 600px;
   margin: 30px auto;
-  color: rgb(0, 0, 0);
+  color: var(--primary-color);
   font-family: 'Open Sans', sans-serif;
   font-size: 1.8rem;
   font-weight: 600;
@@ -476,7 +471,7 @@ h2 span{
   display: flex; /*its better to use inline-flex*/
 }
 .email-box i{
-  background: #000000;
+  background: var(--primary-color);
   width: 40px;
   line-height: 40px;
 }
@@ -493,7 +488,7 @@ h2 span{
   padding: 0 10px;
 }
 .btn{
-  background: #000000;
+  background: var(--primary-color);
   color: white;
   padding: 0 10px;
   text-transform: uppercase;
@@ -513,7 +508,7 @@ h2 span{
 /* FOOTER */
 
 .footer__container {
-  background-color: #1D1D1D;
+  background-color: var(--primary-color);
   padding: 3rem 3rem;
 }
 
@@ -527,7 +522,7 @@ h2 span{
   font-size: 1.8rem;
   letter-spacing: 0.2rem;
   text-align: center;
-  border: 2px solid rgb(255, 0, 0);
+  border: 2px solid var(--accent-color);
   padding: 2px 5px 0px 9px;
   display : inline-block;
   color: white;
@@ -564,5 +559,5 @@ footer #footer__social li{
 footer #footer__social li:hover {
   list-style: none;
   font-size: 1.8rem;
-  color: #ff0000;
+  color: var(--accent-color);
 }
